--- a/src/main/resources/templates/idleScreen.html
+++ b/src/main/resources/templates/idleScreen.html
@@ -8,11 +8,17 @@
     <title>대기화면</title>
     <link rel="stylesheet" type="text/css" href="/static/css/reset.css">
     <link rel="stylesheet" type="text/css" href="/static/css/idleScreen.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cute+Font&family=Do+Hyeon&family=Dongle:wght@400;700&family=Gothic+A1:wght@400;500&family=Gowun+Batang&family=IBM+Plex+Sans+KR&family=Jua&family=Nanum+Gothic+Coding&family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Sunflower:wght@500&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <div class="wrap">
         <div class="container">
+            <img class="logo-image" src="/static/images/logo.png" alt="logo-image">
             <div class="idle-content-area">
                 <span class="idle-content">주문을 하시려면</span>
                 <span class="idle-content">화면을 눌러주세요</span>
