--- a/src/main/resources/static/css/idleScreen.css
+++ b/src/main/resources/static/css/idleScreen.css
@@ -5,15 +5,23 @@
     height: 1920px;
 
     cursor: pointer;
-    background-color: blanchedalmond;
+    background-color: black;
 }
 
 .container {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
     width: 1080px;
     height: auto;
-    background-color: burlywood;
+
+    background-color: #fefefe;
+}
+
+.logo-image {
+    width: 40%;
+    height: 25%;
 }
 
 .idle-content-area {
@@ -23,6 +31,10 @@
     align-items: center;
     width: 100%;
     height: 50%;
+}
+
+.idle-content-area span {
+    padding-bottom: 50px;
 }
 
 .idle-content {
