--- a/src/main/resources/static/css/reset.css
+++ b/src/main/resources/static/css/reset.css
@@ -83,7 +83,7 @@ video {
     padding: 0;
     border: 0;
     font-size: 100%;
-    font: inherit;
+    font-family: 'IBM Plex Sans KR', sans-serif;
     vertical-align: baseline;
 }
 
