--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>메인화면</title>
+
     <link rel="stylesheet" type="text/css" href="/static/css/reset.css">
     <link rel="stylesheet" type="text/css" href="/static/css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Gowun+Batang&family=IBM+Plex+Sans+KR&family=Jua&family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Cute+Font&family=Do+Hyeon&family=Dongle:wght@400;700&family=Gothic+A1:wght@400;500&family=Gowun+Batang&family=IBM+Plex+Sans+KR&family=Jua&family=Nanum+Gothic+Coding&family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Sunflower:wght@500&display=swap"
         rel="stylesheet">
+    <script src="https://kit.fontawesome.com/6bc6b6ea66.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -25,17 +25,17 @@
                 <!-- 로고, 처음으로 영역 -->
                 <div class="header-left">
                     <div class="logo">
-                        로고
+                        <img class="logo-image" src="/static/images/logo2.png">
                     </div>
-                    <div class="">
-                        처음으로
-
+                    <div class="home">
+                        <i class="fa-solid fa-house icon"></i>
+                        <a href="/">처음으로</a>
                     </div>
                 </div>
                 <!-- 관리자 로그인 영역 -->
                 <div class="header-right">
                     <div class="login">
-                        로그인
+                        <a href="/login"><i class="fa-solid fa-user login-icon"></i></a>
                     </div>
                 </div>
             </header>
@@ -55,7 +55,9 @@
                 </div>
                 <!-- 메뉴 선택 영역 -->
                 <div class="select-area">
+                    <ul>
 
+                    </ul>
                 </div>
             </div>
 
