회원가입 페이지

--- a/src/main/resources/static/css/admin/signup.css
+++ b/src/main/resources/static/css/admin/signup.css
@@ -71,7 +71,7 @@
     /* background-color: red; */
 }
 
-.signup-info span {
+.signup-title {
     font-size: 26px;
 }
 
@@ -100,4 +100,5 @@
     height: 45%;
 
     font-size: 28px;
+    cursor: pointer;
 }
