--- a/src/main/resources/templates/admin/signup.html
+++ b/src/main/resources/templates/admin/signup.html
@@ -14,6 +14,7 @@
         href="https://fonts.googleapis.com/css2?family=Cute+Font&family=Do+Hyeon&family=Dongle:wght@400;700&family=Gothic+A1:wght@400;500&family=Gowun+Batang&family=IBM+Plex+Sans+KR&family=Jua&family=Nanum+Gothic+Coding&family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Sunflower:wght@500&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/6bc6b6ea66.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
 </head>
 
 <body>
@@ -33,29 +34,34 @@
             <!-- 회원가입 영역 -->
             <div class="signup-area">
                 <div class="signup-info">
-                    <span>아이디</span>
+                    <label class="signup-title">아이디</label>
                     <input class="signup-input" type="text">
                 </div>
+                <div class="error-msg"></div>
                 <div class="signup-info">
-                    <span>비밀번호</span>
+                    <label class="signup-title">비밀번호</label>
                     <input class="signup-input" type="password">
                 </div>
+                <div class="error-msg"></div>
                 <div class="signup-info">
-                    <span>비밀번호 확인</span>
+                    <label class="signup-title">비밀번호 확인</label>
                     <input class="signup-input" type="password">
                 </div>
+                <div class="error-msg"></div>
                 <div class="signup-info">
-                    <span>사업장 번호</span>
+                    <label class="signup-title">사업장 번호</label>
                     <input class="signup-input" type="text">
                 </div>
+                <div class="error-msg"></div>
             </div>
             <!-- 버튼 영역 -->
             <div class="button-area">
                 <!-- 회원 가입시 로그인 페이지로 돌아가게 -->
-                <button class="signup-button">회원 가입</button>
+                <button class="signup-button" type="button">회원 가입</button>
             </div>
         </div>
     </div>
+    <script src="/static/js/admin/signup.js"></script>
 </body>
 
 </html>
