--- a/src/main/resources/templates/admin/signup.html
+++ b/src/main/resources/templates/admin/signup.html
@@ -37,26 +37,28 @@
             <!-- 회원가입 영역 -->
 
             <div class="signup-area">
-                <div class="signup-info">
-                    <label class="signup-title">아이디</label>
-                    <input class="signup-input" type="text">
-                </div>
-                <div class="error-msg"></div>
-                <div class="signup-info">
-                    <label class="signup-title">비밀번호</label>
-                    <input class="signup-input" type="password">
-                </div>
-                <div class="error-msg"></div>
-                <!-- <div class="signup-info">
+                <form method="post" action="/api/admin/signup">
+                    <div class="signup-info">
+                        <label class="signup-title">아이디</label>
+                        <input class="signup-input" type="text">
+                    </div>
+                    <div class="error-msg"></div>
+                    <div class="signup-info">
+                        <label class="signup-title">비밀번호</label>
+                        <input class="signup-input" type="password">
+                    </div>
+                    <div class="error-msg"></div>
+                    <!-- <div class="signup-info">
                     <label class="signup-title">비밀번호 확인</label>
                     <input class="signup-input" type="password">
                 </div>
                 <div class="error-msg"></div> -->
-                <div class="signup-info">
-                    <label class="signup-title">사업장 번호</label>
-                    <input class="signup-input" type="text">
-                </div>
-                <div class="error-msg"></div>
+                    <div class="signup-info">
+                        <label class="signup-title">사업장 번호</label>
+                        <input class="signup-input" type="text">
+                    </div>
+                    <div class="error-msg"></div>
+                </form>
             </div>
 
 
