--- a/src/main/resources/templates/admin/signup.html
+++ b/src/main/resources/templates/admin/signup.html
@@ -35,30 +35,27 @@
 
 
             <!-- 회원가입 영역 -->
-
             <div class="signup-area">
-                <form method="post" action="/api/admin/signup">
-                    <div class="signup-info">
-                        <label class="signup-title">아이디</label>
-                        <input class="signup-input" type="text">
-                    </div>
-                    <div class="error-msg"></div>
-                    <div class="signup-info">
-                        <label class="signup-title">비밀번호</label>
-                        <input class="signup-input" type="password">
-                    </div>
-                    <div class="error-msg"></div>
-                    <!-- <div class="signup-info">
+                <div class="signup-info">
+                    <label class="signup-title">아이디</label>
+                    <input class="signup-input" type="text">
+                </div>
+                <div class="error-msg"></div>
+                <div class="signup-info">
+                    <label class="signup-title">비밀번호</label>
+                    <input class="signup-input" type="password">
+                </div>
+                <div class="error-msg"></div>
+                <!-- <div class="signup-info">
                     <label class="signup-title">비밀번호 확인</label>
                     <input class="signup-input" type="password">
                 </div>
                 <div class="error-msg"></div> -->
-                    <div class="signup-info">
-                        <label class="signup-title">사업장 번호</label>
-                        <input class="signup-input" type="text">
-                    </div>
-                    <div class="error-msg"></div>
-                </form>
+                <div class="signup-info">
+                    <label class="signup-title">사업장 번호</label>
+                    <input class="signup-input" type="text">
+                </div>
+                <div class="error-msg"></div>
             </div>
 
 
@@ -66,7 +63,7 @@
             <!-- 버튼 영역 -->
             <div class="button-area">
                 <!-- 회원 가입시 로그인 페이지로 돌아가게 -->
-                <button class="signup-button" type="submit">회원 가입</button>
+                <button class="signup-button" type="button">회원 가입</button>
             </div>
         </div>
     </div>
