--- a/src/main/resources/templates/admin/signup.html
+++ b/src/main/resources/templates/admin/signup.html
@@ -38,22 +38,22 @@
             <div class="signup-area">
                 <div class="signup-info">
                     <label class="signup-title">아이디</label>
-                    <input class="signup-input" type="text">
+                    <input class="signup-input" type="text" placeholder="아이디를 입력해주세요.">
                 </div>
                 <div class="error-msg"></div>
                 <div class="signup-info">
                     <label class="signup-title">비밀번호</label>
-                    <input class="signup-input" type="password">
+                    <input class="signup-input" type="password" placeholder="비밀번호를 입력해주세요.">
                 </div>
                 <div class="error-msg"></div>
-                <!-- <div class="signup-info">
+                <div class="signup-info">
                     <label class="signup-title">비밀번호 확인</label>
-                    <input class="signup-input" type="password">
+                    <input class="signup-input" type="password" placeholder="비밀번호를 다시 한번 입력해주세요.">
                 </div>
-                <div class="error-msg"></div> -->
+                <div class="error-msg"></div>
                 <div class="signup-info">
                     <label class="signup-title">사업장 번호</label>
-                    <input class="signup-input" type="text">
+                    <input class="signup-input" type="text" placeholder="사업장 번호를 입력해 주세요.">
                 </div>
                 <div class="error-msg"></div>
             </div>
