--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -34,7 +34,7 @@
                     <span>아이디와 비밀번호를 입력해주세요</span>
                 </div>
                 <!-- 2. 로그인 박스 -->
-                <form class="login-form" method="post" action="/account/login">
+                <form class="login-form" method="post" action="/admin/login">
                     <div class="login-box">
 
                         <div class="id">
@@ -49,7 +49,6 @@
                         <div class="login-btn-area">
                             <button class="login-button" type="submit">로그인</button>
                         </div>
-
                     </div>
                 </form>
                 <!-- 3. 회원가입 -->
@@ -59,6 +58,7 @@
             </div>
         </div>
     </div>
+    <script src="/static/js/admin/login.js"></script>
 </body>
 
 </html>
