--- a/src/main/resources/static/css/admin/admin.css
+++ b/src/main/resources/static/css/admin/admin.css
@@ -59,7 +59,10 @@
 
 
 /* 임시 영역 */
-.none {
+.log-out {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 20%;
     height: 100%;
 }
@@ -152,17 +155,14 @@
     justify-content: center;
     align-items: center;
     border-bottom: 1px solid black;
-    width: 20%;
+    width: 16.6%;
     height: 100%;
-
 }
 
-.a {
+.buttons {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    width: 100%;
-    background-color: aqua;
 }
 
 .modification-button {
