--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -27,12 +27,15 @@
                 <div class="logo">
                     <h2>관리자 페이지</h2>
                 </div>
-                <div class="none"></div>
+
+                <div class="log-out">
+                    <i class="fa-solid fa-right-from-bracket icon"></i>
+                </div>
             </div>
             <!-- 어드민 메인 -->
             <div class="admin-main">
                 <div class="add-menu">
-                    <a class="add-button" href="/admin/menu">추가하기</a>
+                    <a class="add-button" href="/admin/menuDetail">추가하기</a>
                 </div>
                 <div class="admin-main-area">
                     <div class="category">
@@ -52,7 +55,7 @@
                             <li>커피</li>
                             <li>아메리카노</li>
                             <li>4,000원</li>
-                            <li class="a">
+                            <li class="buttons">
                                 <a class="modification-button" href="/admin/menu">수정</a>
                                 <a class="delete-button" href="">삭제</a>
                             </li>
