--- a/src/main/resources/static/css/admin/menuDetail.css
+++ b/src/main/resources/static/css/admin/menuDetail.css
@@ -53,6 +53,16 @@
     height: 100%;
 }
 
+.image-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    border-right: 1px solid black;
+    width: 100%;
+    height: 100%;
+}
+
 .image-title {
     display: flex;
     /* jus */
@@ -63,11 +73,19 @@
 }
 
 .image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 90%;
     height: 70%;
     border: 1px solid grey;
     border-radius: 5px;
 
+}
+
+img {
+    width: 98%;
+    height: 98%;
 }
 
 .image-input {
@@ -105,7 +123,17 @@
     border-radius: 5px;
 
     width: 90%;
-    height: 40%;
+    height: 35%;
+    padding: 15px;
+    font-size: 40px;
+}
+
+.category {
+    border: 1px solid black;
+    border-radius: 5px;
+
+    width: 93%;
+    height: 43%;
     padding: 15px;
     font-size: 40px;
 }
