어드민 페이지

--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -34,8 +34,16 @@
             </div>
             <!-- 어드민 메인 -->
             <div class="admin-main">
-                <div class="add-menu">
-                    <a class="add-button" href="/admin/menuDetail">추가하기</a>
+                <div class="main-header">
+                    <div class="page-number">
+
+                    </div>
+                    <div class="search">
+
+                    </div>
+                    <div class="add-menu">
+                        <a class="add-button" href="/admin/menuDetail">추가하기</a>
+                    </div>
                 </div>
                 <div class="admin-main-area">
                     <div class="category">
