--- a/src/main/resources/static/css/admin/admin.css
+++ b/src/main/resources/static/css/admin/admin.css
@@ -78,14 +78,31 @@
 
 }
 
+.main-header {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    height: 5%;
+}
+
+.page-number {
+    width: 33%;
+    height: 100%;
+}
+
+.search {
+    width: 42%;
+    height: 100%;
+}
+
 .add-menu {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    width: 98%;
-    height: 5%;
+    width: 24%;
+    height: 100%;
     padding-right: 20px;
-    background-color: bisque;
 }
 
 .add-button {
@@ -94,7 +111,7 @@
     align-items: center;
     border: 1px solid black;
     border-radius: 5px;
-    width: 13%;
+    width: 70%;
     height: 40%;
     text-decoration: none;
     color: white;
@@ -115,7 +132,7 @@
 .category {
     width: 100%;
     height: 5%;
-    background-color: blanchedalmond;
+    background-color: #fefefe;
 }
 
 .category-list {
@@ -134,6 +151,7 @@
     border-left: none;
     width: 20%;
     height: 100%;
+    font-size: 26px;
 }
 
 .menu {
