--- a/src/main/resources/static/css/admin/admin.css
+++ b/src/main/resources/static/css/admin/admin.css
@@ -87,42 +87,20 @@
 }
 
 .page-number {
-    width: 25%;
+    width: 33%;
     height: 100%;
 }
 
 .search {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 60%;
+    width: 42%;
     height: 100%;
 }
-
-.search-input {
-    border: 1px solid gray;
-    border-radius: 5px;
-    width: 80%;
-    height: 35%;
-    padding: 5px;
-    font-size: 20px;
-}
-
-.search-button {
-    border: 1px solid gray;
-    border-radius: 5px;
-    width: 15%;
-    height: 40%;
-    cursor: pointer;
-}
-
-
 
 .add-menu {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    width: 15%;
+    width: 24%;
     height: 100%;
     padding-right: 20px;
 }
@@ -133,7 +111,7 @@
     align-items: center;
     border: 1px solid black;
     border-radius: 5px;
-    width: 80%;
+    width: 70%;
     height: 40%;
     text-decoration: none;
     color: white;
@@ -165,53 +143,16 @@
     height: 100%;
 }
 
-th {
+.category-list li {
     display: flex;
     justify-content: center;
     align-items: center;
     border: 1px solid black;
-    border-right: none;
-    height: 87%;
-    padding: 5px 5px;
+    border-left: none;
+    width: 20%;
+    height: 100%;
+    font-size: 26px;
 }
-
-td {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 80%;
-    padding: 5px 5px;
-
-}
-
-.id {
-    width: 6%;
-}
-
-.menu-image {
-    width: 12%;
-}
-
-.menu-category {
-    width: 17%;
-}
-
-.menu-name {
-    width: 22%;
-}
-
-.menu-price {
-    width: 14%;
-}
-
-.memo {
-    width: 14%;
-}
-
-.menu-button {
-    width: 15%;
-}
-
 
 .menu {
     width: 100%;
@@ -224,14 +165,17 @@ td {
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 7%;
+    height: 5%;
 }
 
-.menu-list td {
+.menu-list li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-bottom: 1px solid black;
+    width: 16.6%;
+    height: 100%;
 }
-
-
 
 .buttons {
     display: flex;
@@ -245,7 +189,7 @@ td {
     align-items: center;
     border: 1px solid black;
     border-radius: 5px;
-    width: 45%;
+    width: 40%;
     height: 40%;
 
     text-decoration: none;
@@ -259,7 +203,7 @@ td {
     align-items: center;
     border: 1px solid black;
     border-radius: 5px;
-    width: 45%;
+    width: 40%;
     height: 40%;
     text-decoration: none;
     color: white;
