--- a/src/main/resources/templates/admin/modification.html
+++ b/src/main/resources/templates/admin/modification.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>제품 수정</title>
     <link rel="stylesheet" href="/static/css/reset.css">
-    <link rel="stylesheet" href="/static/css/admin/modification.css">
+    <link rel="stylesheet" href="/static/css/admin/menuDetail.css">
+    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+
 </head>
 
 <body>
@@ -21,13 +23,15 @@
 
                 <!-- 메뉴 이미지 -->
                 <div class="image-area">
-                    <div class="image-title">
-                        <span>상품 이미지</span>
-                    </div>
-                    <div class="image">
-
-                    </div>
-                    <input class="image-input" type="file">
+                    <form class="image-form" enctype="multipart/form-data">
+                        <div class="image-title">
+                            <span>상품 이미지</span>
+                        </div>
+                        <div class="image">
+                            <img src="/static/images/noImage.jpg" alt="no-image">
+                        </div>
+                        <input class="image-input" type="file" name="file">
+                    </form>
                 </div>
                 <!-- 메뉴 정보 -->
                 <div class="menu-detail">
@@ -37,7 +41,15 @@
                     </div>
                     <div class="menu-category menu-info">
                         <span>카테고리</span>
-                        <input class="menu-input" type="text">
+                        <select name="category" class="menu-input">
+                            <option value="">카테고리를 선택해주세요.</option>
+                            <option value="2">시즌</option>
+                            <option value="3">커피</option>
+                            <option value="4">음료</option>
+                            <option value="5">티</option>
+                            <option value="6">디저트</option>
+                        </select>
+                        <!-- <input class="menu-input" type="text"> -->
                     </div>
                     <div class="menu-price menu-info">
                         <span>가격</span>
@@ -51,15 +63,16 @@
                     <span>비고 사항</span>
                 </div>
                 <div class="memo-content">
-                    <textarea class="menu-memo" name="" id="" cols="30" rows="10"></textarea>
+                    <textarea class="menu-memo menu-input" name="" id="" cols="30" rows="10"></textarea>
                 </div>
             </div>
             <div class="button-area">
-                <a class="save-button button" href="">저장</a>
-                <a class="cancel-button button" href="/admin">취소</a>
+                <button class="save-button button" type="button">저장</button>
+                <button class="cancel-button button" type="button">취소</button>
             </div>
         </div>
     </div>
+    <script src="/static/js/menu/modification.js"></script>
 </body>
 
 </html>
