--- a/src/main/resources/templates/admin/modification.html
+++ b/src/main/resources/templates/admin/modification.html
@@ -16,7 +16,7 @@
     <div class="wrap">
         <div class="container">
             <div class="title">
-                <h2>메뉴 상세 페이지</h2>
+                <h2>메뉴 수정 페이지</h2>
             </div>
             <!-- 메뉴 정보 영역 -->
             <div class="menu-info-area">
