--- a/src/main/resources/static/css/admin/admin.css
+++ b/src/main/resources/static/css/admin/admin.css
@@ -87,22 +87,48 @@
 }
 
 .page-number {
-    width: 25%;
+    width: 19%;
     height: 100%;
+
+    background-color: aqua;
 }
 
 .search {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 60%;
+    width: 67%;
+    height: 100%;
+}
+
+.search-category {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 25%;
+    height: 100%;
+    /* background-color: blanchedalmond; */
+}
+
+.category-input {
+    border: 1px solid gray;
+    border-radius: 5px;
+    width: 85%;
+    height: 46%;
+}
+
+.search-area {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 75%;
     height: 100%;
 }
 
 .search-input {
     border: 1px solid gray;
     border-radius: 5px;
-    width: 80%;
+    width: 75%;
     height: 35%;
     padding: 5px;
     font-size: 20px;
@@ -122,7 +148,7 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    width: 15%;
+    width: 13%;
     height: 100%;
     padding-right: 20px;
 }
@@ -133,7 +159,7 @@
     align-items: center;
     border: 1px solid black;
     border-radius: 5px;
-    width: 80%;
+    width: 90%;
     height: 40%;
     text-decoration: none;
     color: white;
@@ -148,7 +174,6 @@
     border-bottom: 1px solid black;
     width: 100%;
     height: 95%;
-    background-color: beige;
 }
 
 .category {
