--- a/src/main/resources/templates/admin/menuDetail.html
+++ b/src/main/resources/templates/admin/menuDetail.html
@@ -23,6 +23,11 @@
 
                 <!-- 메뉴 이미지 -->
                 <div class="image-area">
+
+
+
+
+
                     <form class="image-form" enctype="multipart/form-data">
                         <div class="image-title">
                             <span>상품 이미지</span>
@@ -30,8 +35,14 @@
                         <div class="image">
                             <img src="/static/images/noImage.jpg" alt="no-image">
                         </div>
-                        <input class="image-input" type="file" name="file">
+                        <input class="image-input" type="file" name="menuImg">
                     </form>
+
+
+
+
+
+
                 </div>
                 <!-- 메뉴 정보 -->
                 <div class="menu-detail">
@@ -73,6 +84,7 @@
         </div>
     </div>
     <script src="/static/js/menu/menuDetail.js"></script>
+    <!-- <script src="/static/js/menu/imgTest.js"></script> -->
 </body>
 
 </html>
