--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -65,9 +65,50 @@
 
             <!-- 장바구니 화면 -->
             <div class="product">
-                <div class="menu-list"></div>
+                <!-- 선택한 메뉴 리스트 -->
+                <div class="menu-list">
+                    <div class="menu-info">
+                        <div class="selected-menu-name">
+                            <span>아메리카노</span>
+                        </div>
+                        <div class="menu-count">
+                            <span>개</span>
+                        </div>
+                        <div class="menu-delete-button">
+
+                        </div>
+                    </div>
+                    <div class="menu-info">
+                        <div class="selected-menu-name">
+                            <span>아메리카노</span>
+                        </div>
+                        <div class="menu-count">
+                            <span>개</span>
+                        </div>
+                        <div class="menu-delete-button">
+                            <i class="fa-sharp fa-solid fa-circle-xmark delete-icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu-info">
+                        <div class="selected-menu-name">
+                            <span>아메리카노</span>
+                        </div>
+                        <div class="menu-count">
+                            <span>개</span>
+                        </div>
+                        <div class="menu-delete-button">
+
+                        </div>
+                    </div>
+                </div>
+                <!-- 총 결제 금액 -->
                 <div class="total-price">
-                    <span>총 결제 금액</span>
+                    <div class="total-price-title">
+                        <span>총 결제 금액</span>
+                    </div>
+                    <div class="total-price-amount">
+                        12000<span>원</span>
+                    </div>
                     <div class="button-area">
                         <button class="delete-button ">
                             전체 삭제
