--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -246,6 +246,7 @@
     align-items: center;
     width: 70%;
     height: 100%;
+    font-weight: 600;
 }
 
 .menu-count {
@@ -254,19 +255,20 @@
     align-items: center;
     width: 20%;
     height: 100%;
-    background-color: beige;
+    font-weight: 600;
 }
 
 .menu-delete-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 5%;
     height: 100%;
 }
 
 .delete-icon {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 26px;
+    font-size: 24px;
+    cursor: pointer;
     color: red;
 }
 
@@ -279,33 +281,33 @@
     border-radius: 5px;
     width: 30%;
     height: 80%;
-    background-color: darkkhaki;
 }
 
 .total-price-title {
     display: flex;
     align-items: center;
     width: 100%;
-    height: 15%;
+    height: 20%;
     padding-left: 10px;
     font-size: 24px;
     font-weight: 600;
-    background-color: yellow;
 }
 
 .total-price-amount {
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
     width: 100%;
     height: 40%;
-    padding-right: 10%;
+
     font-size: 36px;
     font-weight: 600;
-    background-color: green;
 }
 
 .total-price-amount span {
+    padding-right: 10%;
     font-size: 24px;
     font-weight: 500;
 }
@@ -316,8 +318,6 @@
     align-items: center;
     width: 100%;
     height: 40%;
-
-    background-color: aqua;
 }
 
 .delete-button {
@@ -325,7 +325,8 @@
     border-radius: 5px;
     width: 40%;
     height: 70%;
-
+    font-size: 24px;
+    font-weight: 600;
     background-color: red;
     color: white;
 }
@@ -335,6 +336,7 @@
     border-radius: 5px;
     width: 40%;
     height: 70%;
-
+    font-size: 24px;
+    font-weight: 600;
     background-color: gray;
 }
