로그인 페이지

--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -34,7 +34,7 @@
                     <span>아이디와 비밀번호를 입력해주세요</span>
                 </div>
                 <!-- 2. 로그인 박스 -->
-                <form class="login-form" method="post" action="/admin/login">
+                <form class="login-form" action="/admin/login" method="post">
                     <div class="login-box">
 
                         <div class="id">
@@ -47,7 +47,7 @@
                         </div>
                         <!-- 로그인 버튼 영역 -->
                         <div class="login-btn-area">
-                            <button class="login-button" type="submit">로그인</button>
+                            <button class="login-button" type="button">로그인</button>
                         </div>
                     </div>
                 </form>
