어드민 페이지

--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -30,7 +30,7 @@
                     <h2>관리자 페이지</h2>
                 </div>
                 <div class="log-out">
-                    <i class="fa-solid fa-right-from-bracket icon"></i>
+                    <i class="fa-solid fa-right-from-bracket logout-icon"></i>
                 </div>
             </div>
             <!-- 어드민 메인 -->
