회원가입 페이지

--- a/src/main/resources/static/css/admin/signup.css
+++ b/src/main/resources/static/css/admin/signup.css
@@ -83,6 +83,12 @@
     font-size: 30px;
 }
 
+.error-msg {
+
+    font-size: 16px;
+    color: red;
+}
+
 /* 버튼 영역 */
 .button-area {
     display: flex;
