--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -38,6 +38,29 @@
                 <div class="main-header">
                     <!-- 페이지 번호 -->
                     <div class="page-number">
+                        <ul class="page-buttons">
+                            <a href="">
+                                <li></li>
+                            </a>
+                            <a href="">
+                                <li>1</li>
+                            </a>
+                            <a href="">
+                                <li>2</li>
+                            </a>
+                            <a href="">
+                                <li>3</li>
+                            </a>
+                            <a href="">
+                                <li>4</li>
+                            </a>
+                            <a href="">
+                                <li>5</li>
+                            </a>
+                            <a href="">
+                                <li></li>
+                            </a>
+                        </ul>
                     </div>
                     <!-- 검색 -->
                     <div class="search">
