메인 페이지

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -75,7 +75,7 @@
                             <span>개</span>
                         </div>
                         <div class="menu-delete-button">
-
+                            <i class="fa-sharp fa-solid fa-circle-xmark delete-icon"></i>
                         </div>
                     </div>
                     <div class="menu-info">
@@ -97,7 +97,7 @@
                             <span>개</span>
                         </div>
                         <div class="menu-delete-button">
-
+                            <i class="fa-sharp fa-solid fa-circle-xmark delete-icon"></i>
                         </div>
                     </div>
                 </div>
