어드민 페이지

--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -46,12 +46,12 @@
                     <div class="search">
                         <div class="search-category">
                             <select name="category" class="category-input">
-                                <option value="">전체 메뉴</option>
-                                <option value="2">시즌</option>
-                                <option value="3">커피</option>
-                                <option value="4">음료</option>
-                                <option value="5">티</option>
-                                <option value="6">디저트</option>
+                                <option value="6">전체 메뉴</option>
+                                <option value="1">시즌</option>
+                                <option value="2">커피</option>
+                                <option value="3">음료</option>
+                                <option value="4">티</option>
+                                <option value="5">디저트</option>
                             </select>
                         </div>
                         <div class="search-area">
