--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -89,7 +89,7 @@
     flex-direction: column;
 
     width: 100%;
-    height: 75%;
+    height: 70%;
 
     /* background-color: darkturquoise; */
 
@@ -215,7 +215,7 @@
     justify-content: space-around;
     align-items: center;
     width: 100%;
-    height: 20%;
+    height: 25%;
 
     /* background-color: cadetblue; */
 }
@@ -237,37 +237,47 @@
     align-items: center;
     border-bottom: 1px solid gray;
     width: 100%;
-    height: 10%;
+    height: 13%;
     padding: 5px 0;
+    font-size: 20px;
 }
 
 .selected-menu-name {
     display: flex;
     align-items: center;
-    width: 70%;
+    width: 65%;
     height: 100%;
+    padding-left: 3%;
     font-weight: 600;
 }
 
 .menu-count {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
-    width: 20%;
+    width: 10%;
     height: 100%;
     font-weight: 600;
 }
 
-.menu-delete-button {
+.price {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 5%;
+    width: 15%;
+    height: 100%;
+    font-weight: 600;
+}
+
+.delete-menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 10%;
     height: 100%;
 }
 
 .delete-icon {
-    font-size: 24px;
     cursor: pointer;
     color: red;
 }
@@ -300,16 +310,15 @@
     border-top: 2px solid black;
     border-bottom: 2px solid black;
     width: 100%;
-    height: 40%;
+    height: 45%;
 
-    font-size: 36px;
+    font-size: 40px;
     font-weight: 600;
 }
 
 .total-price-amount span {
+    padding-left: 2%;
     padding-right: 10%;
-    font-size: 24px;
-    font-weight: 500;
 }
 
 .button-area {
@@ -317,7 +326,7 @@
     justify-content: space-around;
     align-items: center;
     width: 100%;
-    height: 40%;
+    height: 35%;
 }
 
 .delete-button {
