--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -91,7 +91,7 @@
         </div>
 
     </div>
-    <script src="/static/js/main.js"></script>
+    <script src="/static/js/main3.js"></script>
 </body>
 
 </html>
