--- a/src/main/resources/static/css/admin/admin.css
+++ b/src/main/resources/static/css/admin/admin.css
@@ -84,7 +84,7 @@
     justify-content: space-around;
     align-items: center;
     width: 100%;
-    height: 5%;
+    height: 7%;
 }
 
 .page-number {
@@ -118,15 +118,17 @@
     align-items: center;
     width: 20%;
     height: 50%;
-    font-size: 20px;
+    font-size: 23px;
 }
 
 .selected {
-    font-size: 22px;
+    text-decoration: underline;
+    font-size: 27px;
     font-weight: 600;
 }
 
-.arrow-icon {
+.right-icon,
+.left-icon {
     font-size: 20px;
 }
 
@@ -152,6 +154,7 @@
     border-radius: 5px;
     width: 85%;
     height: 46%;
+    font-size: 20px;
 }
 
 .search-area {
@@ -168,7 +171,7 @@
     width: 75%;
     height: 35%;
     padding: 5px;
-    font-size: 20px;
+    font-size: 15px;
 }
 
 .search-button {
@@ -176,6 +179,7 @@
     border-radius: 5px;
     width: 15%;
     height: 40%;
+    font-size: 17px;
     cursor: pointer;
 }
 
@@ -187,7 +191,7 @@
     align-items: center;
     width: 13%;
     height: 100%;
-    padding-right: 20px;
+    padding-right: 18px;
 }
 
 .add-button {
@@ -198,11 +202,13 @@
     border-radius: 5px;
     width: 90%;
     height: 40%;
+    font-size: 17px;
     text-decoration: none;
     color: white;
     background-color: black;
 }
 
+/* 상품 메인 영역 */
 .admin-main-area {
     display: flex;
     flex-direction: column;
@@ -210,7 +216,7 @@
     align-items: center;
     border-bottom: 1px solid black;
     width: 100%;
-    height: 95%;
+    height: 93%;
 }
 
 .category {
@@ -235,6 +241,7 @@ th {
     border-right: none;
     height: 87%;
     padding: 5px 5px;
+    font-size: 18px;
 }
 
 td {
@@ -296,12 +303,13 @@ td {
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 7%;
+    height: 6.5%;
 }
 
 .menu-list td {
     height: 90%;
     border-bottom: 1px solid black;
+    font-size: 18px;
 }
 
 
