--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -84,6 +84,7 @@
         </div>
     </div>
     <script src="/static/js/admin/admin.js"></script>
+    <!-- <script src="/static/js/admin/admin2.js"></script> -->
 </body>
 
 </html>
