결제 서비스 제작중

--- a/src/main/resources/templates/payment/paymentOption.html
+++ b/src/main/resources/templates/payment/paymentOption.html
@@ -21,7 +21,6 @@
     <div class="wrap">
         <div class="container">
             <img class="logo-image" src="/static/images/logo.png" alt="logo-image">
-
             <div class="payment-title">
                 <h2>결제 수단을 선택해 주세요.</h2>
             </div>
@@ -35,11 +34,14 @@
                     <span class="payment-content">현금 결제</span>
                 </div>
             </div>
-
+            <div class="backButton">
+                <!-- 뒤로가기를 눌렀을 떄 메뉴를 살릴 것인가? 전부 지울것인가? -->
+                <a href="">뒤로 가기</a>
+            </div>
         </div>
 
     </div>
-    <script src="/static/js/paymentOption.js"></script>
+    <script src="/static/js/payment/paymentOption.js"></script>
 </body>
 
 </html>
