--- a/src/main/resources/static/css/payment/paymentOption.css
+++ b/src/main/resources/static/css/payment/paymentOption.css
@@ -21,7 +21,7 @@
 .logo-image {
     width: 30%;
     height: 25%;
-    padding-top: 100px;
+    padding-top: 80px;
 }
 
 .payment-title {
@@ -44,12 +44,11 @@
     align-items: center;
     width: 100%;
     height: 35%;
-    padding-top: 130px;
+    padding-top: 50px;
     /* background-color: aquamarine; */
 }
 
-.credit-card,
-.cash {
+.credit-card {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -60,6 +59,18 @@
     border-radius: 5px;
 }
 
+.cash {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 43%;
+    height: 100%;
+    border: 2px solid black;
+    border-radius: 5px;
+    background-color: rgba(255, 255, 51, 0.8);
+}
+
 .icon {
     font-size: 100px;
 }
@@ -67,4 +78,18 @@
 .payment-content {
     padding-top: 20px;
     font-size: 50px;
+}
+
+.backButton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid black;
+    border-radius: 5px;
+    margin-top: 50px;
+    width: 93%;
+    height: 5%;
+
+    font-size: 50px;
+    background-color: #e9e9e9;
 }
