--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -91,7 +91,8 @@
         </div>
 
     </div>
-    <script src="/static/js/main/main.js"></script>
+    <!-- <script src="/static/js/main/main.js"></script> -->
+    <script src="/static/js/test.js"></script>
 </body>
 
 </html>
