--- a/src/main/resources/templates/payment/cardPayment.html
+++ b/src/main/resources/templates/payment/cardPayment.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/css/reset.css">
+    <link rel="stylesheet" href="/static/css/payment/cardPayment.css">
+    <script type="text/javascript" src="https://cdn.iamport.kr/js/iamport.payment-1.1.8.js"></script>
     <title>카드 결제</title>
 </head>
 
@@ -18,6 +21,7 @@
         </div>
 
     </div>
+    <script src="/static/js/payment/cardPayment.js"></script>
 </body>
 
 </html>
