결제 시스템 제작중

--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -91,8 +91,8 @@
         </div>
 
     </div>
-    <!-- <script src="/static/js/main/main.js"></script> -->
-    <script src="/static/js/test.js"></script>
+    <script src="/static/js/main/main.js"></script>
+    <!-- <script src="/static/js/test.js"></script> -->
 </body>
 
 </html>
