--- a/src/main/resources/templates/payment/cardPayment.html
+++ b/src/main/resources/templates/payment/cardPayment.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/reset.css">
     <link rel="stylesheet" href="/static/css/payment/cardPayment.css">
-    <script type="text/javascript" src="https://cdn.iamport.kr/js/iamport.payment-1.1.8.js"></script>
+    <script type="text/javascript" src="https://cdn.iamport.kr/js/iamport.payment-1.2.0.js"></script>
+    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <title>카드 결제</title>
 </head>
 
